--- a/views/calc.ejs
+++ b/views/calc.ejs
@@ -1,3 +1,3 @@
 <%- include('../partials/header') %>
-  <p>Timestamp: <%= time %></p>
+  <p>The result is: <%= result %></p>
 <%- include('../partials/footer') %>
