--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -1,3 +1,3 @@
 <%- include('../partials/header') %>
-  <p>Timestamp: <%= time %></p>
+  <p><%= message %></p>
 <%- include('../partials/footer') %>
