feat: :sparkles: create more views and work with conditionals

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -8,5 +8,5 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/clients">Clients</a></li>
-      <li><a href="/calc/sum?num1=1&num2=2">Sum</a></li>
+      <li><a href="/calc">Calc</a></li>
     </ul>
