--- a/views/calc.ejs
+++ b/views/calc.ejs
@@ -1,3 +1,7 @@
 <%- include('../partials/header') %>
-  <p>The result is: <%= result %></p>
+  <p><%= message %></p>
+  <ul>
+    <li><a href="/calc/sum?num1=1&num2=2">Sum 1 + 2</a></li>
+    <li><a href="/calc/even/1">Even</a></li>
+  </ul>
 <%- include('../partials/footer') %>
