--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -1,3 +1,7 @@
 <%- include('../partials/header') %>
   <p><%= message %></p>
+  <ul>
+    <li><a href="/clients/list">List</a></li>
+    <li><a href="/clients/create">Create</a></li>
+  </ul>
 <%- include('../partials/footer') %>
